# test_ws

devel/: .catkin
devel/include/freenect_camera/: FreenectConfig.h
devel/lib/kobuki_keyop/: keyop
devel/lib/navigation/: auto_explore_mapping.py
devel/lib/pkgconfig/: dynamixel_controllers.pc  dynamixel_driver.pc  dynamixel_msgs.pc  dynamixel_tutorials.pc  freenect_camera.pc  freenect_launch.pc  kobuki_bumper2pc.pc  kobuki_dashboard.pc  kobuki_description.pc  kobuki_gazebo.pc  kobuki_gazebo_plugins.pc  kobuki_keyop.pc  kobuki_node.pc  kobuki_rviz_launchers.pc  kobuki_safety_controller.pc  my_dynamixel.pc  navigation.pc  robot_voice.pc  turtlebot_actions.pc  turtlebot_bringup.pc  turtlebot_calibration.pc  turtlebot_capabilities.pc  turtlebot_dashboard.pc  turtlebot_description.pc  turtlebot_follower.pc  turtlebot_gazebo.pc  turtlebot_interactive_markers.pc  turtlebot_msgs.pc  turtlebot_navigation.pc  turtlebot_rapps.pc  turtlebot_rviz_launchers.pc  turtlebot_stage.pc  turtlebot_stdr.pc  turtlebot_teleop.pc  vision_motion_tasks.pc  vision_perception_tasks.pc  yocs_cmd_vel_mux.pc  yocs_controllers.pc  yocs_velocity_smoother.pc
devel/lib/robot_voice/: iat_publish  tts_subscribe  voice_control
devel/lib/turtlebot_actions/: find_fiducial_pose  turtlebot_move_action_server
devel/lib/turtlebot_interactive_markers/: turtlebot_marker_server
devel/lib/turtlebot_navigation/: laser_footprint_filter
devel/lib/vision_perception_tasks/: model_utils.py
src/my_dynamixel/config/: tilt.yaml
src/navigation/: CMakeLists.txt  General.py  laser_amcl_demo(1).launch  laser_gmapping_demo(1).launch
src/navigation/launch/: mapping_only.launch  nav_saved_map.launch  test_arrive_follow.launch
src/navigation/maps/: online_map.pgm  online_map.yaml
src/rcj_home/: CMakeLists.txt  package.xml
src/vision_motion_tasks/: CMakeLists.txt  README.md
src/vision_motion_tasks/launch/: competition_full.launch  follow_only_with_kinect.launch  gaze_only_with_kinect.launch  motion_pipeline.launch  vision_tasks_all.launch  vision_with_freenect.launch
src/vision_motion_tasks/scripts/: gaze_controller.py  person_follow_controller.py
src/vision_perception_tasks/: CMakeLists.txt  README.md  package.xml
src/vision_perception_tasks/launch/: perception_pipeline.launch
src/vision_perception_tasks/models/: mobilenet_iter_73000.caffemodel
src/vision_perception_tasks/scripts/: object_shelf_detector.py
(+66 files in other folders)
